k8s-manifets/Deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend 
        image: ahmedalmahdi/serverside:v2
        ports:
        - containerPort: 8080
