k8s-manifets/Deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: frontend
  namespace: dev
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: frontend 
  template:
    metadata:
      labels:
        app: frontend 
    spec:
      containers:
      - name: frontend
        image: ahmedalmahdi/clientside:v2
        ports: 
        - containerPort: 80
        resources:
          limits:
            memory: "1024Mi"
            cpu: "750m"
          requests:
            memory: "512Mi"
            cpu: "512m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
