k8s-manifets/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: serverside
        image: ahmedalmahdi/serverside:latest
        ports:
        - containerPort: 8080
