k8s-manifets/deploy-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ahmedalmahdi/serverside:v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "750m"
            memory: "1Gi"
        readinessProbe:  # Add readiness and liveness probes
          httpGet:
            path: /health  # Replace with your backend health check endpoint
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health # Replace with your backend health check endpoint
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
