k8s-manifets/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ahmedalmahdi/clientside:v2
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "1024Mi"
            cpu: "750m"
          requests:
            memory: "512Mi"
            cpu: "512m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
      # initContainers:  # Make sure backend is ready
      # - name: wait-for-backend
      #   image: busybox:1.35 # Use a specific version
      #   command: ['sh', '-c', 'until wget -qO- http://svc-backend:8080/health; do echo waiting for backend; sleep 2; done;'] # Use wget with health check
