k8s-manifets/deploy-sqlserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
        - name: sqlserver
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql
              name: sqlserver-data
          resources:
            requests:
              memory: "2Gi"
              cpu: "1"
            limits:
              memory: "3Gi"
              cpu: "2"
      volumes:
        - name: sqlserver-data
          persistentVolumeClaim:
            claimName: sqlserver-data-pvc
