k8s-manifets/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: clientside
        image: ahmedalmahdi/clientside:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: test
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000  # You can set any port between 30000-32767, or omit to let Kubernetes choose
  selector:
    app: client
