k8s-manifets/svc-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-backend
  namespace: test
spec:
  ports:
    - port: 8080
  selector:
    app: api
