k8s-manifets/svc-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  namespace: test
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: client
