k8s-manifets/svc-sqlserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-sqlserver
  namespace: dev
spec:
  selector:
    app: sqlserver
  ports:
    - port: 1433
      targetPort: 1433
