k8s-manifets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "app.local"
      http:
        paths:
        - path: /frontend(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: svc-frontend
              port:
                number: 80
        - path: /backend(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: svc-backend
              port:
                number: 8080
